Changed seed for personal use

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>Capstone Project</display-name>
+  <display-name>Project</display-name>
   <servlet>
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -21,12 +21,12 @@
 
     <filter>
   	<filter-name>authFilter</filter-name>
-  	<filter-class>com.techelevator.security.AuthorizationFilter</filter-class>
+  	<filter-class>com.nathanbardwell.security.AuthorizationFilter</filter-class>
   </filter>
   
   <filter>
   	<filter-name>csrfFilter</filter-name>
-  	<filter-class>com.techelevator.security.CSRFFilter</filter-class>
+  	<filter-class>com.nathanbardwell.security.CSRFFilter</filter-class>
   </filter>
   
   <filter-mapping>
