--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,7 +31,7 @@
   
   <filter-mapping>
   	<filter-name>authFilter</filter-name>
-  	<url-pattern>/users/*</url-pattern>
+  	<url-pattern>/admin/*</url-pattern>
   </filter-mapping>
   
   <filter-mapping>
